// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TierAndListTypeReviewContainer rendering should render the review page before anything is loaded 1`] = `
<tier-and-list-type-review-container
  appStore={[Function _MockStore]}
  caseUrn={[Function Function]}
  formRoute={[Function Array]}
  hearingId={[Function String]}
  route={[Function Object]}
  store={[Function _SignalStore]}
>
  <h1
    class="govuk-heading-l"
    pdk-typography="heading-large"
  >
    TIER_AND_LIST_TYPE.REVIEW_HEADING
  </h1><pdk-divider
    class="govuk-!-margin-top-2 govuk-!-margin-bottom-2"
    pdk-margin-vertical="2"
  >
    <hr
      class="pdk-divider"
    />
  </pdk-divider><strong
    class="govuk-body-s"
    pdk-typography="body-small"
  >
    URN-1
  </strong><pdk-divider
    class="govuk-!-margin-top-2 govuk-!-margin-bottom-2"
    pdk-margin-vertical="2"
  >
    <hr
      class="pdk-divider"
    />
  </pdk-divider>
</tier-and-list-type-review-container>
`;

exports[`TierAndListTypeReviewContainer rendering should render the review page with a loaded record 1`] = `
<tier-and-list-type-review-container
  appStore={[Function _MockStore]}
  caseUrn={[Function Function]}
  formRoute={[Function Array]}
  hearingId={[Function String]}
  route={[Function Object]}
  store={[Function _SignalStore]}
>
  <h1
    class="govuk-heading-l"
    pdk-typography="heading-large"
  >
    TIER_AND_LIST_TYPE.REVIEW_HEADING
  </h1><pdk-divider
    class="govuk-!-margin-top-2 govuk-!-margin-bottom-2"
    pdk-margin-vertical="2"
  >
    <hr
      class="pdk-divider"
    />
  </pdk-divider><strong
    class="govuk-body-s"
    pdk-typography="body-small"
  >
    URN-1
  </strong><pdk-divider
    class="govuk-!-margin-top-2 govuk-!-margin-bottom-2"
    pdk-margin-vertical="2"
  >
    <hr
      class="pdk-divider"
    />
  </pdk-divider><tier-and-list-type-review>
    <div>
      mock review
    </div>
  </tier-and-list-type-review>
</tier-and-list-type-review-container>
`;
